--- a/appointmentsystem/grails-app/conf/application.yml
+++ b/appointmentsystem/grails-app/conf/application.yml
@@ -103,16 +103,16 @@ dataSource:
 environments:
     development:
         dataSource:
-            dbCreate: create
+            dbCreate: update
             url: jdbc:mysql://localhost:3306/surgery
     test:
         dataSource:
             dbCreate: update
-            url: 
+            url: jdbc:mysql://localhost:3306/appointment
     production:
         dataSource:
             dbCreate: none
-            url: 
+            url: jdbc:mysql://localhost:3306/doctors
             properties:
                 jmxEnabled: true
                 initialSize: 5
